--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     }
   },
   "engines": {
-    "node": "12.* || 14.* || 16.* || >= 18"
+    "node": "18.* || 20.* || >= 22"
   },
   "ember": {
     "edition": "octane"
