--- a/ember-changeset/.gitignore
+++ b/ember-changeset/.gitignore
@@ -1,25 +1,17 @@
+# The authoritative copies of these live in the monorepo root (because they're
+# more useful on github that way), but the build copies them into here so they
+# will also appear in published NPM packages.
+/README.md
+/LICENSE.md
+
 # compiled output
-/dist/
-/declarations/
+dist/
+declarations/
 
-# dependencies
-/node_modules/
+# npm/pnpm/yarn pack output
+*.tgz
 
-# misc
-/.env*
-/.pnp*
-/.eslintcache
-/coverage/
-/npm-debug.log*
-/testem.log
-/yarn-error.log
-
-# ember-try
-/.node_modules.ember-try/
-/npm-shrinkwrap.json.ember-try
-/package.json.ember-try
-/package-lock.json.ember-try
-/yarn.lock.ember-try
-
-# broccoli-debug
-/DEBUG/
+# deps & caches
+node_modules/
+.eslintcache
+.prettiercache
