--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,8 @@ jobs:
           cache: pnpm
       - name: Install Dependencies
         run: pnpm install --no-lockfile
+      - name: pnpm why -r @embroider/macros
+        run: pnpm why -r @embroider/macros
       - name: Run Tests
         run: pnpm test:ember
         working-directory: test-app
