--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,10 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Lint
         run: pnpm lint
-        working-directory: test-app
+        working-directory: tests
       - name: Run Tests
         run: pnpm test:ember
-        working-directory: test-app
+        working-directory: tests
 
   floating:
     name: "Floating Dependencies"
@@ -50,7 +50,7 @@ jobs:
         run: pnpm install --no-lockfile
       - name: Run Tests
         run: pnpm test:ember
-        working-directory: test-app
+        working-directory: tests
 
   try-scenarios:
     name: ${{ matrix.try-scenario }}
@@ -90,4 +90,4 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Run Tests
         run: ./node_modules/.bin/ember try:one ${{ matrix.try-scenario }} --skip-cleanup
-        working-directory: test-app
+        working-directory: tests
