--- a/.github/workflows/push-dist.yml
+++ b/.github/workflows/push-dist.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           branch: dist
           token: ${{ secrets.GITHUB_TOKEN }}
-          working-directory: 'test-app'
+          working-directory: "test-app"
